--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url= jdbc:log4jdbc:mysql://kubernetes.cnjyg4xt7bn8.ap-northeast-1.rds.amazonaws.com?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.url= jdbc:log4jdbc:mysql://kubernetes.cnjyg4xt7bn8.ap-northeast-1.rds.amazonaws.com:3306/jpastart?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1111
 spring.datasource.hikari.connection-test-query=SELECT 1
